---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let o = {a:0}
let k = "a"
let v = 1
o[k] = o[k] + v
o[k] += v

OK
.fn @main
  params 0
  stack 5
  .locals
    o = r1
    k = r2
    v = r3
  .code
   0  ltable r1, 1
   1  lsmi r2, 0
   2  skeyc r1, "a", r2
   3  lstr r2, "a"
   4  lsmi r3, 1
   5  lidx r4, r1, r2
   6  add r4, r4, r3
   7  sidx r1, r2, r4
   8  lidx r4, r1, r2
   9  add r4, r4, r3
  10  sidx r1, r2, r4
  11  lnil r0
  12  ret
